Adding code across 2016 info

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,10 @@
       height: 35px;
       padding: 0px 0px;
     }
+    .sponsorlogo {
+      height: 70px;
+      padding: 0px 0px;
+    }
 
     /* CUSTOMIZE THE NAVBAR
     -------------------------------------------------- */
